@@ -25,6 +25,12 @@
      [clientloop.c]
      remove confusing callback code
  - (djm) Add CVS Id's to files that we have missed
+ - (bal) OpenBSD Sync (more):
+   - itojun@cvs.openbsd.org 2001/02/08 19:30:52
+     sync with netbsd tree changes.
+     - more strict prototypes, include necessary headers
+     - use paths.h/pathnames.h decls
+     - size_t typecase to int -> u_long
 
 20010208
  - (djm) Don't delete external askpass program in make uninstall target.
@@ -3678,4 +3684,4 @@
  - Wrote replacements for strlcpy and mkdtemp
  - Released 1.0pre1
 
-$Id: ChangeLog,v 1.704 2001/02/09 01:55:35 djm Exp $
+$Id: ChangeLog,v 1.705 2001/02/09 02:11:24 mouring Exp $
